navbar html code finish and work sans google font added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:wght@400;700&family=Poppins:wght@500;600;700&family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/0b24ce5498.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Online Gamer Zone</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <!--navbar section started-->
+    <nav>
+      <div class="nav-container">
+        <div class="logo-container">
+          <img src="./images/Frame.png" alt="" />
+          <p><span class="logo-title">G</span>amer</p>
+        </div>
 
-    
-</body>
+        <div class="navbar-item-list">
+          <a href="#">About us</a>
+          <a href="#">Developers</a>
+          <a href="#"
+            >Follow Us on
+            <i class="fa-brands fa-youtube" style="color: red"></i>
+            <i class="fa-brands fa-tiktok" style="color: #000000"></i>
+          </a>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
