--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="nav-container">
         <div class="logo-container">
           <img src="./images/Frame.png" alt="" />
-          <p><span class="logo-title">G</span>amer</p>
+          <h1><span class="logo-title">G</span>amer</h1>
         </div>
 
         <div class="navbar-item-list">
           <a href="#">About us</a>
           <a href="#">Developers</a>
-          <a href="#"
+          <a href="#" class="follow-icon"
             >Follow Us on
             <i class="fa-brands fa-youtube" style="color: red"></i>
             <i class="fa-brands fa-tiktok" style="color: #000000"></i>
@@ -41,5 +41,7 @@
         </div>
       </div>
     </nav>
+    <!--navbar finished-->
+    
   </body>
 </html>
