banner section responsive finish

--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
         </div>
       </div>
     </nav>
-    <!--navbar finished-->
-    
+    <!--navbar section finished-->
+
+    <main>
+        <!--banner section started-->
+        <section class="banner-container">
+            <div class="banner-info">
+                <h3>Play Like The</h3>
+                <h2>G.O.A.T.</h2>
+                <h1>1-Click instant play</h1>
+                <h4>No Download</h4>
+                <h5>1000s of supported online games</h5>
+                <button class="btn-primary">Sign In</button>
+                <button class="btn-secondary">Go Rogue</button>
+            </div>
+            <div class="banner-image">
+                <img src="./images/Group 18.png" alt="">
+            </div>
+        </section>
+    </main>
+
   </body>
 </html>
