people section started

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                
                 <div class="games-icon">
                     <img src="./images/Rectangle 7.png" alt="">
+                    <h3>Watch Now</h3>
                     <p>Breaking game records like OG</p>
                 </div>
                
@@ -93,6 +94,23 @@
         </section>
 
         <!-- online games video section finish-->
+
+        <!--play people section-->
+        <section class="play-people-container">
+            <h3 class="play2">Play Instantly,</h3> <br>
+                <h4 class="play3">No Downloads <br>
+                    No Installs.</h4>
+                <p class="play4">Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+
+                <div class="play-people-image">
+                    <img src="./images/Rectangle 55.png" alt="">
+                </div>
+
+                <div class="play-people-image">
+                    <img src="./images/Rectangle 66.png" alt="">
+                </div>
+
+        </section>
 
     </main>
 
