games image hover responsive finish

--- a/index.html
+++ b/index.html
@@ -96,19 +96,66 @@
         <!-- online games video section finish-->
 
         <!--play people section-->
-        <section class="play-people-container">
-            <h3 class="play2">Play Instantly,</h3> <br>
-                <h4 class="play3">No Downloads <br>
-                    No Installs.</h4>
+       <!--<section class="play-people-container">
+            <div class="people-info">
+                <h3 class="play2">Play Games Online </h3> <br>
+                <h4 class="play3">Anywhere, Anytime!</h4>
                 <p class="play4">Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+            </div>
 
                 <div class="play-people-image">
-                    <img src="./images/Rectangle 55.png" alt="">
+                    <img src="./images/Rectangle 67.png" alt="">
                 </div>
 
-                <div class="play-people-image">
-                    <img src="./images/Rectangle 66.png" alt="">
+                <div class="play-people-image2">
+                    <img src="./images/Rectangle 78.png" alt="">
                 </div>
+
+        </section>
+
+        <!--play people section finish-->
+
+        <!--games info section start-->
+
+        <section class="image-content">
+            <div class="game-info2">
+                <img src="./images/Rectangle 11.png" alt="">
+                <h6>Action Games</h6>
+            </div>
+
+            <div class="games-info2"> <img src="./images/Rectangle 12.png" alt="">
+                <h6>Adventure Games</h6>
+            </div>
+
+            <div class="games-info2"><img src="./images/Rectangle 13.png" alt="">
+                <h6>Arcade Games</h6>
+            </div>
+
+            <div class="games-info2"><img src="./images/Rectangle 14.png" alt="">
+                <h6>Educational Games</h6>
+            </div>
+
+            <div class="games-info2"> <img src="./images/Rectangle 15.png" alt="">
+                <h6>Word Games</h6>
+            </div>
+
+            <div class="games-info2"> <img src="./images/Rectangle 16.png" alt="">
+                <h6>Role Palying Games</h6>
+            </div>
+
+            <div class="games-info2"><img src="./images/Rectangle 17.png" alt="">
+                <h6>Music & Audio Games</h6>
+            </div>
+
+            <div class="games-info2">
+                <img src="./images/Rectangle 18.png" alt="">
+                <h6>Puzzle Games</h6>
+            </div>
+
+            <div class="games-info2">
+                <img src="./images/Rectangle 19.png" alt="">
+                <h6>Strategy Games</h6>
+            </div>
 
         </section>
 
