--- a/index.html
+++ b/index.html
@@ -118,10 +118,6 @@
         <!--games info section start-->
 
         <section class="image-content">
-            <div class="game-info2">
-                <img src="./images/Rectangle 11.png" alt="">
-                <h6>Action Games</h6>
-            </div>
 
             <div class="games-info2"> <img src="./images/Rectangle 12.png" alt="">
                 <h6>Adventure Games</h6>
@@ -158,8 +154,17 @@
             </div>
 
         </section>
-
+        <!--games info section finish-->
     </main>
+
+    <!--footer section start-->
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="./images/Frame.png" alt="">
+            <h1><span class="logo-title">G</span>amer</h1>
+        </div>
+    </div
+    </footer>
 
   </body>
 </html>
