footer complete with responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="banner-info">
                 <h3>Play Like The</h3>
                 <h2>G.O.A.T.</h2>
-                <h1>1-Click instant play</h1>
+                <h1></i>1-Click instant play</h1>
                 <h4>No Download</h4>
                 <h5>1000s of supported online games</h5>
                 <button class="btn-primary">Sign In</button>
@@ -96,7 +96,7 @@
         <!-- online games video section finish-->
 
         <!--play people section-->
-       <!--<section class="play-people-container">
+       <section class="play-people-container">
             <div class="people-info">
                 <h3 class="play2">Play Games Online </h3> <br>
                 <h4 class="play3">Anywhere, Anytime!</h4>
@@ -114,6 +114,7 @@
         </section>
 
         <!--play people section finish-->
+
 
         <!--games info section start-->
 
@@ -159,12 +160,38 @@
 
     <!--footer section start-->
     <footer class="footer">
+        <div class="footer-container">
         <div class="footer-logo">
             <img src="./images/Frame.png" alt="">
-            <h1><span class="logo-title">G</span>amer</h1>
+            <h1 class="logo-title-footer"><span class="logo-title">G</span>amer</h1>
         </div>
+        <ul>
+            <li><a href="">Our Story</a></li>
+            <li><a href="">Games</a></li>
+            <li><a href="">Web Games</a></li>
+            <li><a href="">Careers</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">My Account</a></li>
+        </ul>
+
+        <div class="socials-link">
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-apple"></i></a>
+        </div>
+
+        <div class="our-policy">
+            <a href="">Terms and Conditions</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Cookies Policy</a>
+            <a href="">Privacy Settings</a>
+        </div>
+        <small>Play Games &#64 Gamer &#64 2000-2023 Gamer Bangladesh</small>
     </div
     </footer>
-
+    <!--footer section finish-->
   </body>
 </html>
