play people section finish

--- a/index.html
+++ b/index.html
@@ -97,20 +97,24 @@
 
         <!--play people section-->
        <section class="play-people-container">
-            <div class="people-info">
-                <h3 class="play2">Play Games Online </h3> <br>
-                <h4 class="play3">Anywhere, Anytime!</h4>
-                <p class="play4">Play games online for free without <br> downloading. Just click the Play button <br> and play instantly in your browser.</p>
+        <div class="play-container">
+            <div class="play-instantly-container">
+                <div class="play-instantly-content">
+                <h3 class="play2"> <span class="play-text">Play Instantly, </span><br> <span class="play-text2">No Downloads</span>
+                    <br><span class="play-text3">No Installs.</span></h3>
+                <p class="play4">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
             </div>
 
                 <div class="play-people-image">
-                    <img src="./images/Rectangle 67.png" alt="">
+                    <img src="./images/Rectangle 55.png" alt="">
                 </div>
 
                 <div class="play-people-image2">
-                    <img src="./images/Rectangle 78.png" alt="">
+                    <img src="./images/Rectangle 66.png" alt="">
                 </div>
-
+            </div>
+        </div>
+    </div>
         </section>
 
         <!--play people section finish-->
