all page responsive finish

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
 
         <section class="image-content">
 
+            <div class="games-info2"> <img src="./images/Rectangle 11.png" alt="">
+                <h6>Action Games</h6>
+            </div>
+
             <div class="games-info2"> <img src="./images/Rectangle 12.png" alt="">
                 <h6>Adventure Games</h6>
             </div>
