images issue solved

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="footer-container">
         <div class="footer-logo">
             <img src="./images/Frame.png" alt="">
-            <h1 class="logo-title-footer"><span class="logo-title">G</span>amer</h1>
+            <h1><span class="logo-title">G</span>amer</h1>
         </div>
         <ul>
             <li><a href="">Our Story</a></li>
