some issue solved

--- a/index.html
+++ b/index.html
@@ -20,25 +20,28 @@
 
   <body>
     <!--navbar section started-->
-    <nav>
-      <div class="nav-container">
-        <div class="logo-container">
-          <img src="./images/Frame.png" alt="" />
-          <h1><span class="logo-title">G</span>amer</h1>
-        </div>
-
-        <div class="navbar-item-list">
-          <a href="#">About us</a>
-          <a href="#">Developers</a>
-          <a href="#" class="follow-icon"
-            >Follow Us on
-            <i class="fa-brands fa-youtube" style="color: red"></i>
-            <i class="fa-brands fa-tiktok" style="color: #000000"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
-    <!--navbar section finished-->
+    <header>
+        <nav>
+            <div class="nav-container">
+              <div class="logo-container">
+                <img src="./images/Frame.png" alt="" />
+                <h1><span class="logo-title">G</span>amer</h1>
+              </div>
+      
+              <div class="navbar-item-list">
+                <a href="#">About us</a>
+                <a href="#">Developers</a>
+                <a href="#" class="follow-icon"
+                  >Follow Us on
+                  <i class="fa-brands fa-youtube" style="color: red"></i>
+                  <i class="fa-brands fa-tiktok" style="color: #000000"></i>
+                </a>
+              </div>
+            </div>
+          </nav>
+          <!--navbar section finished-->
+    </header>
+   
 
     <main>
         <!--banner section started-->
